feat: add flip cards block

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,101 @@
 					</div>
 				</div>
 				<!-- end headerBlock-->
+				<!-- start sEvents-->
+				<section class="sEvents section" id="sEvents">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>Мероприятия</h2>
+							<div class="sub-text">Более 300 мероприятий, каждое проводится в 3 форматах</div>
+						</div>
+						<div class="sEvents__cards-wrapper"><img class="zig" src="img/svg/zig-zag3.svg" alt="" loading="lazy"/>
+							<div class="flip-card scene scene--card">
+								<div class="card">
+									<div class="card__face card__face--front"><img class="w" src="img/svg/flip-card-bg-1.svg" alt="" loading="lazy"/><img class="man" src="img/flip-card-man.png" alt="" loading="lazy"/><img class="man-bg d-none d-xxl-block" src="img/flip-card-man-bg.png" alt="" loading="lazy"/>
+										<div class="flip-card__descr-wrap">
+											<div class="flip-card__title">Встреча с владельцем бизнеса
+											</div>
+											<div class="flip-card__icon-wrap">
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+									<div class="card__face card__face--back"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<p>Ты познакомишься с успешными предпринимателями, задашь волнующие вопросы о росте и развитии бизнеса, откроешь для себя реальные истории и вдохновишься на создание своего дела. Сможешь сделать запрос на наставничество.</p>
+									</div>
+								</div>
+							</div>
+							<div class="flip-card scene scene--card">
+								<div class="card is-flipped">
+									<div class="card__face card__face--front"><img class="star" src="img/svg/star-green.svg" alt="" loading="lazy"/><img class="card-2" src="img/flip-card-2.png" alt="" loading="lazy"/>
+										<div class="flip-card__descr-wrap">
+											<div class="flip-card__title">Бизнес-экскурсия
+											</div>
+											<div class="flip-card__icon-wrap">
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+									<div class="card__face card__face--back"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<p>Окунись в мир бизнеса через экскурсии по компаниям предпринимателей, где ты сможешь всё потрогать, пощупать и лично у владельцев узнать принципы работы бизнес-процессов.</p>
+									</div>
+								</div>
+							</div>
+							<div class="flip-card scene scene--card">
+								<div class="card">
+									<div class="card__face card__face--front"><img class="card-3" src="img/flip-card-3.png" alt="" loading="lazy"/>
+										<div class="flip-card__descr-wrap">
+											<div class="flip-card__title">Мастер-класс
+											</div>
+											<div class="flip-card__icon-wrap">
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+									<div class="card__face card__face--back"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
+										<p>Узнай, как на самом деле работает бизнес, участвуй в практических мастер-классах и раскрой свои таланты.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="sEvents__inner-wrapper">
+							<div class="line-card">
+								<div class="line-card__num-wrap">
+									<div class="num fw-700">1</div>
+								</div>
+								<div class="line-card__green fw-500">Поток
+								</div>
+								<div class="line-card__text fw-500">Август – сентябрь 2024
+								</div>
+							</div>
+							<div class="line-card">
+								<div class="line-card__num-wrap">
+									<div class="num fw-700">2</div>
+								</div>
+								<div class="line-card__green fw-500">Поток
+								</div>
+								<div class="line-card__text fw-500">Сентябрь – ноябрь 2024
+								</div>
+							</div>
+							<div class="text-center">
+								<h3>Выбирай город и посещай мероприятия</h3>
+							</div>
+							<div class="btn-wrap text-center">
+								<a class="sEvents__btn btn btn-light btn-light_green" href="#">План-график
+								</a>
+								<a class="sEvents__btn btn btn-light btn-light_green" href="#">Подать заявку
+								</a>
+							</div><img class="events-bg" src="img/sEvents-bg.png" alt="" loading="lazy"/>
+						</div>
+					</div>
+				</section>
+				<!-- end sEvents-->
 				<!-- start sApply-->
 				<section class="sApply section" id="sApply"><img class="zig-zag" src="img/svg/zig-zag2.svg" alt="" loading="lazy"/>
 					<div class="container">
@@ -215,7 +310,7 @@
 													<use xlink:href="img/svg/sprite.svg#location"></use>
 												</svg>Красноярский край
 											</div>
-											<div class="person-card__company">Компания «БРОНИРУЙ» Компания «БРОНИРУЙ»
+											<div class="person-card__company">Компания «БРОНИРУЙ»
 											</div>
 										</div>
 									</div>
