--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -16,11 +16,11 @@
 							</div>
 							<nav>
 								<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О проекте</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Участникам</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Эксперты</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Вопросы</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sEvents" itemprop="url">О проекте</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sApply" itemprop="url">Участникам</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sPersons" itemprop="url">Эксперты</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Вопросы</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sContact" itemprop="url">Контакты</a></li>
 								</ul>
 							</nav>
 						</div>
