--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 								</div>
 							</div>
 							<div class="flip-card scene scene--card">
-								<div class="card is-flipped">
+								<div class="card">
 									<div class="card__face card__face--front"><img class="star" src="img/svg/star-green.svg" alt="" loading="lazy"/><img class="card-2" src="img/flip-card-2.png" alt="" loading="lazy"/>
 										<div class="flip-card__descr-wrap">
 											<div class="flip-card__title">Бизнес-экскурсия
