--- a/public/index.html
+++ b/public/index.html
@@ -393,7 +393,8 @@
 								<div class="sPersons__slide swiper-slide">
 									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
 										<div class="row">
-											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+											<div class="firm-card__content col-12 col-lg-8">
+												<h3>«Мордовагроресурс»</h3>
 												<div class="firm-card__city">
 													<svg class="icon icon-location ">
 														<use xlink:href="img/svg/sprite.svg#location"></use>
@@ -412,7 +413,8 @@
 								<div class="sPersons__slide swiper-slide">
 									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
 										<div class="row">
-											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+											<div class="firm-card__content col-12 col-lg-8">
+												<h3>mord</h3>
 												<div class="firm-card__city">
 													<svg class="icon icon-location ">
 														<use xlink:href="img/svg/sprite.svg#location"></use>
@@ -431,7 +433,8 @@
 								<div class="sPersons__slide swiper-slide">
 									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
 										<div class="row">
-											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+											<div class="firm-card__content col-12 col-lg-8">
+												<h3>Молочный комбинат «Коровка из Кореновки»</h3>
 												<div class="firm-card__city">
 													<svg class="icon icon-location ">
 														<use xlink:href="img/svg/sprite.svg#location"></use>
@@ -450,7 +453,8 @@
 								<div class="sPersons__slide swiper-slide">
 									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
 										<div class="row">
-											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+											<div class="firm-card__content col-12 col-lg-8">
+												<h3>Саратовстройстекло</h3>
 												<div class="firm-card__city">
 													<svg class="icon icon-location ">
 														<use xlink:href="img/svg/sprite.svg#location"></use>
@@ -469,7 +473,8 @@
 								<div class="sPersons__slide swiper-slide">
 									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
 										<div class="row">
-											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+											<div class="firm-card__content col-12 col-lg-8">
+												<h3>mord</h3>
 												<div class="firm-card__city">
 													<svg class="icon icon-location ">
 														<use xlink:href="img/svg/sprite.svg#location"></use>
@@ -488,7 +493,8 @@
 								<div class="sPersons__slide swiper-slide">
 									<div class="firm-card"><img class="line" src="img/svg/line.svg" alt="" loading="lazy"/>
 										<div class="row">
-											<div class="firm-card__content col-12 col-lg-8"><img class="name" src="img/svg/mord.svg" alt="" loading="lazy"/>
+											<div class="firm-card__content col-12 col-lg-8">
+												<h3>«Акконд»</h3>
 												<div class="firm-card__city">
 													<svg class="icon icon-location ">
 														<use xlink:href="img/svg/sprite.svg#location"></use>
