fix: edit zig-zag

--- a/public/index.html
+++ b/public/index.html
@@ -583,12 +583,12 @@
 						<div class="text-center">
 							<a class="sFAQ__btn btn btn-light btn-light_orange" href="#">Подать заявку
 							</a>
-						</div>
+						</div><img class="zig-zag" src="img/svg/zig-zag-update.svg" alt="" loading="lazy"/>
 					</div>
 				</section>
 				<!-- end sFAQ-->
 				<!-- start sPartners-->
-				<section class="sPartners section" id="sPartners"><img class="zig-zag" src="img/svg/zig-zag.svg" alt="" loading="lazy"/>
+				<section class="sPartners section" id="sPartners">
 					<div class="container">
 						<div class="section-title text-center">
 							<h2>Партнёры</h2>
