--- a/public/index.html
+++ b/public/index.html
@@ -577,6 +577,9 @@
 								</div>
 								<div class="dd-group__content dd-content-js active">
 									<p>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</p>
+									<ul>
+										<li>Возможно, для этого достаточно обратиться к ним после мероприятия с запросом</li>
+									</ul>
 								</div>
 							</div>
 						</div>
