--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 							</div>
 							<div class="flip-card scene scene--card">
 								<div class="card">
-									<div class="card__face card__face--front"><img class="card-3" src="img/flip-card-3.png" alt="" loading="lazy"/>
+									<div class="card__face card__face--front"><img class="man" src="img/flip-card-3.png" alt="" loading="lazy"/>
 										<div class="flip-card__descr-wrap">
 											<div class="flip-card__title">Мастер-класс
 											</div>
